# swagger_server/swagger/swagger.yaml
@@ -25,10 +25,10 @@ tags:
 paths:
   /constructor:
     post:
-      summary: Send a new topology or update to SDX-LC
-      description: Build a topology
       tags:
       - constructor
+      summary: Send a new topology or update to SDX-LC
+      description: Build a topology
       operationId: build_topology
       requestBody:
         description: placed for adding or update a new topology
@@ -55,6 +55,70 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorMessage'
       x-openapi-router-controller: swagger_server.controllers.constructor_controller
+  /producer:
+    post:
+      tags:
+      - producer
+      summary: Send a new message to Rabbit MQ
+      description: Produce a Queue Message
+      operationId: push_message
+      requestBody:
+        description: placed for adding or updating a new message
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewJob'
+        required: true
+      responses:
+        "200":
+          description: Produce a message response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Job'
+        "400":
+          description: Invalid Connection
+        "405":
+          description: Invalid input
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+      x-openapi-router-controller: swagger_server.controllers.producer_controller
+  /provisioning:
+    post:
+      tags:
+      - provisioning
+      summary: Send a new provisioning or update to SDX-LC
+      description: Post a Provisioning from SDX-Controller
+      operationId: create_provisioning
+      requestBody:
+        description: placed for adding or update a new provisioning
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewConstructor'
+        required: true
+      responses:
+        "200":
+          description: create provisioning response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Provisioning'
+        "400":
+          description: Invalid Connection
+        "405":
+          description: Invalid input
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+      x-openapi-router-controller: swagger_server.controllers.provisioning_controller
   /topology:
     get:
       tags:
@@ -183,38 +247,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorMessage'
       x-openapi-router-controller: swagger_server.controllers.topology_controller
-  /producer:
-    post:
-      tags:
-      - producer
-      summary: Send a new message to Rabbit MQ
-      description: Produce a Queue Message
-      operationId: push_message
-      requestBody:
-        description: placed for adding or updating a new message
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/NewJob'
-        required: true
-      responses:
-        "200":
-          description: Produce a message response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Job'
-        "400":
-          description: Invalid Connection
-        "405":
-          description: Invalid input
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-      x-openapi-router-controller: swagger_server.controllers.producer_controller
   /user:
     get:
       tags:
@@ -351,14 +383,62 @@ paths:
         "409":
           description: conflict error
       x-openapi-router-controller: swagger_server.controllers.user_controller
+  /validator:
+    post:
+      tags:
+      - validator
+      summary: Send a new topology validation or update
+      description: Post a topology validation
+      operationId: get_validate
+      requestBody:
+        description: placed for adding or update a new validation
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewValidator'
+        required: true
+      responses:
+        "200":
+          description: create validation response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Validator'
+        "400":
+          description: Invalid Connection
+        "405":
+          description: Invalid input
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+      x-openapi-router-controller: swagger_server.controllers.validator_controller
 components:
   schemas:
+    Job:
+      minItems: 1
+      type: array
+      items:
+        $ref: '#/components/schemas/NewJob'
+    NewJob:
+      type: object
+      additionalProperties: {}
     Constructor:
       minItems: 1
       type: array
       items:
         $ref: '#/components/schemas/NewConstructor'
     NewConstructor:
+      type: object
+      additionalProperties: {}
+    Provisioning:
+      minItems: 1
+      type: array
+      items:
+        $ref: '#/components/schemas/NewProvisioning'
+    NewProvisioning:
       type: object
       additionalProperties: {}
     Topology:
@@ -572,14 +652,6 @@ components:
           - disabled
           - maintenance
       additionalProperties: false
-    Job:
-      minItems: 1
-      type: array
-      items:
-        $ref: '#/components/schemas/NewJob'
-    NewJob:
-      type: object
-      additionalProperties: {}
     User:
       allOf:
       - $ref: '#/components/schemas/NewUser'
@@ -602,4 +674,12 @@ components:
         password:
           type: string
       additionalProperties: false
+    Validator:
+      minItems: 1
+      type: array
+      items:
+        $ref: '#/components/schemas/NewValidate'
+    NewValidator:
+      type: object
+      additionalProperties: {}
 
